# neira

./: .gitignore  LICENSE  Procfile  README.md  associationList.py  chains.py  corrections.json  critiques-fours-girls-1.txt  founders-day-head-to-head.json  founders-day-transcribed-2024.csv  founders-day-transcribed-2025.csv  founders-day.json  head-to-head-fours-girls-1.csv  head-to-head-fours-girls-2.csv  head-to-head-fours-girls-3.csv  head-to-head-fours-girls-4.csv  head-to-head.csv  index.html  neira.config.json  pyproject.toml  read.py  requirements.txt  row2k.sqlite3  scrape.py
cleaned_data/: 02C6B837008230E6665D0C3F19487890.json  0A06BB5337D4EBAFB4A716F6CCD660BF.json  0B538421DF95D95D5523F6EF4CB5CD04.json  16655D45C19917353A60332C40B27209.json  18DCB0511D8588B057AAE05D158887C1.json  193F4296CB862153CF0FD21B95E6AB20.json  1D76E2C55B685887DE5F5F56885001A6.json  20E78FECE0268B5584D1E5BC6689C505.json  25084165812CED4AFD5819AADD12D8EF.json  2A4F56FA4FB7C41A0E813337362894A3.json  2D89FFB1693C84B71BE3E39CB54EABE0.json  3710F27F185D74B3D15DF923C787D9E1.json  3C4A29E47D98F61F0E48D4228A060005.json  3C7FA9842592DF4262271085CADE97E5.json  3F962587F5195CAC9807287404512E2B.json  4B4C574EDD6CC2B9960D17FC0A26DE61.json  572A866681F1A29F4BC821412ED10F61.json  574DEA01D736263BF1969B97108094B7.json  5AC13C0A039EE6AFC8E97E47C247F44E.json  5BE52A0B0D2C5D9EFE557E09C6164DD7.json  622A605D840C2B57865CD47A05BAB2CD.json  69233FE8176AF29F759DFFF1815560E8.json  81067D27DF71795C160BB3CEFD091670.json  8C2C44D0D87199862BBA177721B1AC2F.json  8CCAFC10198F257F661CCA17A80627CA.json  (+19 more)
docs/: 404.html  (+1805 more)
(+10646 files in other folders)
